--- a/src/slices/sidebar/discussion-comments/comments-list/Node.css
+++ b/src/slices/sidebar/discussion-comments/comments-list/Node.css
@@ -1,6 +1,6 @@
 .node {
     & .commentFrame {
-        padding: 1.5rem 0;
+        padding: 1rem 0;
 
         & .hidden {
             position: fixed;
